<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">EnforceDoze</string>
    <string name="service_active">EnforceDoze service is active</string>
    <string name="service_inactive">EnforceDoze service is inactive</string>
    <string name="service_disabled">EnforceDoze service is disabled</string>
    <string name="root_workaround_text">SU permission denied or not available! If you don\'t have root, press \'Root workaround\' to get instructions on how to enable no-root mode</string>
    <string name="root_workaround_button_text">Root workaround</string>
    <string name="close_button_text">Close</string>
    <string name="lockscreen_timeout_snackbar_text">The lockscreen timeout value on your device is too high!</string>
    <string name="more_info_text">More info</string>
    <string name="doze_unsupported_more_info">Some devices have Doze mode disabled by the OEM. This option can enable Doze mode on devices which do not have it enabled by default.\n\nNote: You will have to turn this option on every time you restart your phone.</string>
    <string name="doze_unsupported_more_info_title">Enable Doze on unsupported device</string>
    <string name="enable_doze_button_text">Enable Doze mode</string>
    <string name="no_root_workaround_dialog_title">No-root workaround</string>
    <string name="okay_button_text">Okay</string>
    <string name="copy_command_button_text">Copy Command</string>
    <string name="share_command_button_text">Share command</string>
    <string name="no_root_workaround_dialog_text">If your device isn\'t rooted, you can manually grant the permission \'android.permission.DUMP\' (and \'android.permission.WRITE_SECURE_SETTINGS\' if you\'re on Nougat) to this app by executing the following ADB command from your computer: </string>
    <string name="lockscreen_timeout_dialog_title">Lockscreen timeout</string>
    <string name="open_security_settings_button_text">Open Security Settings</string>
    <string name="lockscreen_timeout_dialog_text_p1">The lockscreen timeout value on your device is too high (</string>
    <string name="lockscreen_timeout_dialog_text_p2">" mins). This means your device does not "</string>
    <string name="lockscreen_timeout_dialog_text_p3">"automatically lock itself after the screen turns off until "</string>
    <string name="lockscreen_timeout_dialog_text_p4">" mins have passed. This also means EnforceDoze will wait "</string>
    <string name="lockscreen_timeout_dialog_text_p5">"for "</string>
    <string name="lockscreen_timeout_dialog_text_p6">" mins before making your device enter Doze mode by using a temporary wake lock. If you want EnforceDoze to make the device enter Doze mode faster, consider reducing the lockscreen timeout to Immediately in your device's Security Settings. If you want EnforceDoze to make the device enter Doze mode regardless of the lockscreen timeout, turn on 'Ignore lockscreen timeout' option in EnforceDoze Settings."</string>
    <string name="force_doze_info">EnforceDoze enables Doze the moment you turn off your screen. It also disables motion sensing so Doze doesn\'t accidentally deactivate unless it\'s time to execute maintenance jobs, making battery savings much higher than standard Doze functionality</string>
    <string name="disable_motion_sensors_setting_title">Disable motion sensors on screen off</string>
    <string name="disable_motion_sensors_setting_summary">Disable device motion sensors when the device goes into Doze mode</string>
    <string name="disable_all_sensors_setting_title">Disable all sensors on screen off</string>
    <string name="disable_all_sensors_setting_summary">Disable seall sensors when the device goes into Doze mode (motion, camera...)</string>
    <string name="enable_battery_saver_setting_title">Turn on Battery Saver on screen off</string>
    <string name="enable_battery_saver_setting_summary">Turn on Battery Saver while the device is in Doze mode</string>
    <string name="enable_airplane_setting_title">Turn on Airplane on screen off</string>
    <string name="enable_airplane_setting_summary">Turn on Airplane mode while the device is in Doze mode</string>
    <string name="disable_bluetooth_setting_title">Disable Bluetooth on screen off</string>
    <string name="disable_bluetooth_setting_summary">Turn off Bluetooth while the device is in Doze mode</string>
    <string name="disable_gps_setting_title">Disable GPS on screen off</string>
    <string name="disable_gps_setting_summary">Turn off GPS/Location while the device is in Doze mode</string>
    <string name="disable_biometrics_setting_title">Disable biometrics unlock while screen off</string>
    <string name="disable_biometrics_setting_summary">Disable biometrics unlock while screen off. Might not work on all devices</string>
    <string name="disable_when_charging_setting_summary">Turn off EnforceDoze when device is plugged in to a charger</string>
    <string name="disable_when_charging_setting_title">Turn off while charging</string>
    <string name="rotate_brightness_fix_setting_summary">Workaround for auto-rotate and auto-brightness not working after screen on</string>
    <string name="rotate_brightness_fix_setting_title">Auto-rotate/brightness fix</string>
    <string name="persistent_notification_setting_summary">Show Doze stats in persistent notification</string>
    <string name="persistent_notification_setting_title">Show persistent notification</string>
    <string name="lockscreen_timeout_setting_summary">Ignore lockscreen timeout and enable Doze immediately after screen off</string>
    <string name="lockscreen_timeout_setting_title">Ignore lockscreen timeout</string>
    <string name="wait_unlock_setting_summary">Wait for device unlock to leave doze and enable disabled features</string>
    <string name="wait_unlock_setting_title">Wait for unlock to leave doze</string>
    <string name="doze_delay_setting_summary">Add a delay before Doze mode kicks in after screen-off</string>
    <string name="doze_delay_setting_title">Doze delay</string>
    <string name="custom_doze_periods_setting_title">Custom Doze periods</string>
    <string name="custom_doze_periods_setting_summary_empty">No custom periods. EnforceDoze can run at any time.</string>
    <string name="whitelist_apps_setting_summary">Whitelist apps from Doze mode</string>
    <string name="whitelist_apps_setting_text">Whitelist apps</string>
    <string name="reset_forcedoze_setting_summary">Reset EnforceDoze to the default state</string>
    <string name="reset_forcedoze_setting_title">Reset EnforceDoze</string>
    <string name="clear_doze_stats_setting_summary">Clear Doze battery stats</string>
    <string name="clear_doze_stats_setting_title">Clear stats</string>
    <string name="show_app_logs_setting_summary">Show application debug logs</string>
    <string name="show_app_logs_setting_title">Debug logs</string>
    <string name="about_forcedoze_setting_title">About EnforceDoze</string>
    <string name="disable_wifi_during_doze_setting_summary">Turn off WiFi during Doze</string>
    <string name="disable_wifi_during_doze_setting_title">Disable WiFi during Doze</string>
    <string name="disable_data_during_doze_setting_summary">Turn off mobile data during Doze</string>
    <string name="disable_data_during_doze_setting_title">Disable mobile data during Doze</string>
    <string name="ignore_hospot_during_doze_setting_summary">Disable to prevent disabling wifi/data during hotspot</string>
    <string name="ignore_hospot_during_doze_setting_title">Ignore Hotspot state while entering Doze</string>
    <string name="tasker_broadcast_setting_title">Tasker broadcasts</string>
    <string name="tasker_broadcast_setting_summary">Show broadcasts that you can use via Tasker</string>
    <string name="notif_blocklist_setting_summary">Prevent notifications from being delivered during Doze</string>
    <string name="notif_blocklist_setting_title">Doze notification blocklist</string>
    <string name="app_blocklist_setting_summary">Prevent apps (and its background services) from running during Doze</string>
    <string name="app_blocklist_setting_title">Doze app blocklist</string>
    <string name="ignore_current_app_setting_title">Whitelist Current app</string>
    <string name="ignore_current_app_setting_summary">Currently focused app will be whitelisted even if in block list</string>
    <string name="whitelist_music_app_network_setting_title">Whitelist music app</string>
    <string name="whitelist_music_app_network_setting_summary">Don\'t turn off all networks if music is playing</string>
    <string name="disable_stats_setting_summary">Disable ForceDoze statistics</string>
    <string name="disable_stats_setting_title">Disable statistics</string>
    <string name="disable_logcat_setting_summary">Prevent ForceDoze from logging to system logcat</string>
    <string name="disable_logcat_setting_title">Disable Logcat</string>
    <string name="show_disabled_notification_setting_title">Show notification when disabled</string>
    <string name="show_disabled_notification_setting_summary">Show a status bar notification when EnforceDoze is disabled (tap to enable)</string>
    <string name="execution_mode_setting_title">Execution mode</string>
    <string name="execution_mode_setting_summary">Choose between Root or Shizuku for executing commands</string>
    <string name="sponsor_card_title">Support EnforceDoze</string>
    <string name="sponsor_settings_title">Support the project</string>
    <string name="sponsor_settings_summary">EnforceDoze is free &amp; open-source — consider sponsoring</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_doze_tunables">Doze Tunables</string>
    <string name="btn_battery_stats">Battery Stats</string>
    <string name="btn_enable_toggle">Enable EnforceDoze</string>
    <string name="doze_unsupported_btn_text">Enable Doze on unsupported device</string>
    <string name="settings_general_title">General</string>
    <string name="settings_general_summary">Service behaviour &amp; notifications</string>
    <string name="settings_doze_enhancements_title">Doze Enhancements</string>
    <string name="settings_doze_enhancements_summary">Additional battery-saving features during Doze</string>
    <string name="settings_scheduling_title">Scheduling</string>
    <string name="settings_scheduling_summary">Control when EnforceDoze runs</string>
    <string name="settings_advanced_title">Advanced</string>
    <string name="settings_advanced_summary">Diagnostics, reset &amp; other options</string>
</resources>